<resources>
    <string name="app_name">Estoque MP</string>
    <string name="title_home">Início</string>
    <string name="title_dashboard">Painel de Controle</string>
    <string name="title_notifications">Notificações</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo_salvar">Salvar</string>
    <string name="title_cad_produto">Cadastro</string>
    <string name="title_con_produto">Consulta</string>

    <string-array name="categoriadoproduto">
        <item>Selecionar Categoria</item>
        <item>Açougue</item>
        <item>Bebida</item>
        <item>Cereais</item>
        <item>Doces</item>
        <item>Frios e laticínios</item>
        <item>Frutas</item>
        <item>Padaria</item>
        <item>Hortifruti</item>
        <item>Higiene e limpeza</item>
        <item>Produto de Limpeza</item>
        <item>Produtos Gerais</item>

    </string-array>

    <string-array name="unidadedemedida">
        <item>Selecionar Unidade de Medida</item>
        <item>Un</item>
        <item>kg</item>
        <item>g</item>
        <item>l</item>
        <item>ml</item>

    </string-array>

</resources>


